tests/integration/snapshots/tests__integration__parser__arrow_access.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 12,
        },
        source: "v.foo->v.bar",
        is_complex: false,
        body: [
            Expression(
                ArrowAccess(
                    ArrowAccessExpression {
                        span: Span {
                            start: 0,
                            end: 12,
                        },
                        left: Variable(
                            VariableExpression {
                                span: Span {
                                    start: 0,
                                    end: 5,
                                },
                                lifetime: Variable,
                                member: Property {
                                    span: Span {
                                        start: 0,
                                        end: 5,
                                    },
                                    property: IdentifierReference {
                                        span: Span {
                                            start: 2,
                                            end: 5,
                                        },
                                        name: "foo",
                                    },
                                },
                            },
                        ),
                        right: Variable(
                            VariableExpression {
                                span: Span {
                                    start: 7,
                                    end: 12,
                                },
                                lifetime: Variable,
                                member: Property {
                                    span: Span {
                                        start: 7,
                                        end: 12,
                                    },
                                    property: IdentifierReference {
                                        span: Span {
                                            start: 9,
                                            end: 12,
                                        },
                                        name: "bar",
                                    },
                                },
                            },
                        ),
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
