tests/integration/snapshots/tests__integration__parser__block.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 5,
        },
        source: "{1;};",
        is_complex: true,
        body: [
            Expression(
                Block(
                    BlockExpression {
                        span: Span {
                            start: 0,
                            end: 4,
                        },
                        statements: [
                            Expression(
                                NumericLiteral(
                                    NumericLiteral {
                                        span: Span {
                                            start: 1,
                                            end: 2,
                                        },
                                        value: 1.0,
                                        raw: "1",
                                    },
                                ),
                            ),
                        ],
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
