tests/integration/snapshots/tests__integration__parser__block_undelimited.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 3,
        },
        source: "{1}",
        is_complex: true,
        body: [
            Expression(
                Block(
                    BlockExpression {
                        span: Span {
                            start: 0,
                            end: 3,
                        },
                        statements: [
                            Expression(
                                NumericLiteral(
                                    NumericLiteral {
                                        span: Span {
                                            start: 1,
                                            end: 2,
                                        },
                                        value: 1.0,
                                        raw: "1",
                                    },
                                ),
                            ),
                        ],
                    },
                ),
            ),
        ],
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "Expressions inside `{}` must be delimited by `;`",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    2,
                                ),
                                length: 1,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: Some(
                    "Try inserting a semicolon here",
                ),
                severity: Error,
            },
        },
        Diagnostic {
            inner: DiagnosticInner {
                message: "Semicolons are required for complex Molang expressions (contain `=` or `;`)",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    3,
                                ),
                                length: 0,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: Some(
                    "Try inserting a semicolon here",
                ),
                severity: Error,
            },
        },
    ],
    panicked: false,
}
