tests/integration/snapshots/tests__integration__parser__boolean_false.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 5,
        },
        source: "false",
        is_complex: false,
        body: [
            Expression(
                BooleanLiteral(
                    BooleanLiteral {
                        span: Span {
                            start: 0,
                            end: 5,
                        },
                        value: false,
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
