tests/integration/snapshots/tests__integration__parser__boolean_true.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 4,
        },
        source: "true",
        is_complex: false,
        body: [
            Expression(
                BooleanLiteral(
                    BooleanLiteral {
                        span: Span {
                            start: 0,
                            end: 4,
                        },
                        value: true,
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
