tests/integration/snapshots/tests__integration__parser__break.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 5,
        },
        source: "break",
        is_complex: false,
        body: [
            Break(
                BreakStatement {
                    span: Span {
                        start: 0,
                        end: 5,
                    },
                },
            ),
        ],
    },
    errors: [],
    panicked: false,
}
