tests/integration/snapshots/tests__integration__parser__complex_expression.snap
---
source: tests/integration/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 8,
        },
        source: "0; 0; 0;",
        is_complex: true,
        body: [
            Expression(
                NumericLiteral(
                    NumericLiteral {
                        span: Span {
                            start: 0,
                            end: 1,
                        },
                        value: 0.0,
                        raw: "0",
                    },
                ),
            ),
            Expression(
                NumericLiteral(
                    NumericLiteral {
                        span: Span {
                            start: 3,
                            end: 4,
                        },
                        value: 0.0,
                        raw: "0",
                    },
                ),
            ),
            Expression(
                NumericLiteral(
                    NumericLiteral {
                        span: Span {
                            start: 6,
                            end: 7,
                        },
                        value: 0.0,
                        raw: "0",
                    },
                ),
            ),
        ],
    },
    errors: [],
    panicked: false,
}
